--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://твой-логин.github.io/название-репозитория",
-  "name": "CS2 TON Market",
-  "iconUrl": "https://твой-логин.github.io/название-репозитория/icon.png"
+  "url": "https://pupokslona13377-spec.github.io/StatTrakMRKT/",
+  "name": "StatTrak Market",
+  "iconUrl": "https://pupokslona13377-spec.github.io/StatTrakMRKT/icon.png"
 }
