--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "stattrak-backend",
+  "name": "stattrakmrkt-backend",
   "version": "1.0.0",
+  "description": "Backend for StatTrakMRKT Telegram Mini App",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.0",
-    "cors": "^2.8.5"
+    "mongoose": "^7.3.1",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.1.4"
   },
-  "scripts": {
-    "start": "node server.js"
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
