--- a/package.json
+++ b/package.json
@@ -4,18 +4,13 @@
   "description": "Backend for StatTrakMRKT Telegram Mini App",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.1.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "body-parser": "^1.20.2"
   },
   "engines": {
     "node": ">=16.0.0"
