--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "stattrakmrkt-backend",
+  "name": "stattrak-backend",
   "version": "1.0.0",
-  "description": "Backend for StatTrakMRKT Telegram Mini App",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.3.1",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "axios": "^1.6.0",
+    "cors": "^2.8.5"
   },
-  "engines": {
-    "node": ">=16.0.0"
+  "scripts": {
+    "start": "node server.js"
   }
 }
