--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,7 @@
 {
-  "url": "https://pupokslona13377-spec.github.io/StatTrakMRKT/",
+  "url": "https://stattrakmrkt.onrender.com",
   "name": "StatTrak Market",
-  "iconUrl": "https://pupokslona13377-spec.github.io/StatTrakMRKT/icon.png"
+  "iconUrl": "https://stattrakmrkt.onrender.com/icon.png",
+  "termsOfUseUrl": "https://stattrakmrkt.onrender.com/terms",
+  "privacyPolicyUrl": "https://stattrakmrkt.onrender.com/privacy"
 }
