--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
+BOT_TOKEN=8418041091:AAGkmmNjo2Vs22gAMQorh96G092Xedo-A04
 PORT=3000
-NODE_ENV=production
-STEAM_API_KEY=demo_key_123
-ADMIN_WALLETS=EQCD123456789
