--- a/package.json
+++ b/package.json
@@ -1,36 +1,16 @@
 {
-  "name": "stattrak-market-pro",
+  "name": "massage-miniapp",
   "version": "1.0.0",
-  "description": "Telegram Web App для торговли CS2 скинами через TON",
+  "description": "Mini App для бронирования массажа с Telegram",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "start": "node server.js"
   },
-  "keywords": [
-    "telegram",
-    "webapp",
-    "cs2",
-    "ton",
-    "crypto",
-    "marketplace"
-  ],
-  "author": "STATTRAK TEAM",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "node-fetch": "^3.3.1",
-    "dotenv": "^16.3.1",
-    "ton": "^13.12.0",
-    "ton-crypto": "^3.2.0",
-    "@tonconnect/sdk": "^2.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
