--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "massage-miniapp",
+  "name": "massage-mini-app",
   "version": "1.0.0",
-  "description": "Mini App для бронирования массажа с Telegram",
-  "main": "server.js",
+  "description": "Mini app for massage booking demo",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.5",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
